# minTTC

./: .gitignore  README.md  pyproject.toml
rlvr/: README.md  grpo.py  main.py  main_base.py  main_distill.py  main_instruct.py  main_trl.py  muon.py  pyproject.toml  requirements.txt  test.py  utils.py
rlvr/dev/: main.py  utils.py
search/: README.md  eval.py  main.py  main_aime25.py  mcts.py  nohup.out  responses.jsonl  responses_1Bhigh.jsonl  responses_32B_baseline.jsonl  responses_32B_mcts_16.jsonl  responses_32B_mcts_8.jsonl  responses_mcts.jsonl
search/minimal/: eval.py  main.py
