[project]
name = "minttc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "deepspeed==0.15",
    "flash-attn>=2.7.4.post1",
    "liger-kernel>=0.5.3",
    "math-verify>=0.3.2",
    "matplotlib>=3.10.0",
    "peft>=0.14.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.1",
    "trl>=0.14.0",
    "vllm>=0.7.0",
    "wandb>=0.19.4",
]

[dependency-groups]
dev = []
